cleaned up and added composer/installers required to plugin and theme composer.json

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "type"        : "project",
   "homepage": "http://www.trick-e.com/",
-  "license": "GPL-2.0+",
+  "license": "proprietary",
   "support": {
     "issues": "http://core.trac.wordpress.org/",
     "forum": "http://wordpress.org/support/",
@@ -26,16 +26,11 @@
     {
       "type": "composer",
       "url": "http://wpackagist.org"
-    },
-    {
-      "type": "vcs",
-      "url": "../changeMeLocalUrlForPluginOrTheme"
     }
   ],
   "require": {
-    "php": ">=5.4 <5.5",
+    "php": ">=5.4 <5.7",
     "johnpbloch/wordpress" : ">=4.2 <4.3",
-    "composer/installers": "~1.0",
     "wpackagist-plugin/jonradio-multiple-themes": ">=7.1 <7.2"
   },
   "extra"       : {
